--- a/hightlight/index.html
+++ b/hightlight/index.html
@@ -19,6 +19,7 @@
 
 <body>
   <div class="wrapper_9999" style="margin:min(50px, 50 / 750 * 100cqw) auto;">
+    <h1>ここまで違う！？私生活の姿……！</h1>
     <div class="toc_9999 yellow">
       <div>
         <a href="#morning">朝</a>
@@ -358,7 +359,7 @@
       color:#888;
       font-size:.6rem;
       display:inline-block;
-      padding:min(8px,1.06cqw) min(16px,2.13cqw);
+      padding:min(8px,1.06cqw);
       margin-bottom:1cqw;
       box-shadow:0px 2px 5px 0px rgba(0,0,0,0.16), 0px 2px 6px 0px rgba(0,0,0,0.12);
       border:2px solid #666;
