--- a/hightlight/index.html
+++ b/hightlight/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="wrapper_9999" style="margin:min(50px, 50 / 750 * 100cqw) auto;">
-    <h1>ここまで違う！？私生活の姿……！</h1>
+    <p class="ttl">ここまで違う！？私生活の姿……！</p>
     <div class="toc_9999 yellow">
       <div>
         <a href="#morning">朝</a>
@@ -203,6 +203,11 @@
       width: 100%;
       /* container-queryを使用　width=100%=100cqw */
       container-type: inline-size;
+    }
+    .wrapper_9999 .ttl {
+      text-align: center;
+      font-size:min(32 / 750 * 100cqw,32px);
+      font-weight: 900;
     }
     .wrapper_9999 .list {
       padding: 0.5em;
