--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="item">
             <div class="item_parent">
                 <div class="item_photo">
-                    <p class="left"><img src="img/flower/pc.png"></p>
-                    <p class="right"><img src="img/flower/sp.png"></p>
+                    <p class="left"><img src="img/flower/pc.png" alt=""></p>
+                    <p class="right"><img src="img/flower/sp.png" alt=""></p>
                 </div>
                 <ul class="text_list">
                     <li class="text_list_item">
@@ -44,7 +44,7 @@
 
             <div class="item_parent">
                 <div class="item_photo">
-                    <p class="left"><img src="img/hightlight/top.png"></p>
+                    <p class="left"><img src="img/hightlight/top.png" alt=""></p>
                 </div>
                 <ul class="text_list">
                     <li class="text_list_item">
@@ -69,7 +69,7 @@
         <div class="item">
             <div class="item_parent">
                 <div class="item_photo">
-                    <p class="left"><img src="img/calc/top.png"></p>
+                    <p class="left"><img src="img/calc/top.png" alt=""></p>
                 </div>
                 <ul class="text_list">
                     <li class="text_list_item">
@@ -91,6 +91,29 @@
                 </ul>
             </div>
 
+            <div class="item_parent">
+                <div class="item_photo">
+                    <p class="left"><img src="" alt="未定"> </p>
+                </div>
+                <ul class="text_list">
+                    <li class="text_list_item">
+                        <div class="text_list_title">URL</div>
+                        <div class="text_list_info">
+                            <a href="https://rivermori.github.io/tangrowth/-/">
+                                https://rivermori.github.io/tangrowth/-/
+                            </a>
+                        </div>
+                    </li>
+                    <li class="text_list_item">
+                    <div class="text_list_title">制作時期</div>
+                    <div class="text_list_info">-</div>
+                    </li>
+                    <li class="text_list_item">
+                    <div class="text_list_title">メモ</div>
+                    <div class="text_list_info">-</div>
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
