--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 
         <div class="item">
-            <div class="item_parent">
+            <div class="item_parent green">
+                <p class="item_title">花屋のサイト</p>
                 <div class="item_photo">
                     <p class="left"><img src="img/flower/pc.png" alt=""></p>
                     <p class="right"><img src="img/flower/sp.png" alt=""></p>
@@ -42,7 +43,8 @@
                 </ul>
             </div>
 
-            <div class="item_parent">
+            <div class="item_parent pink">
+                <p class="item_title">コピペができるJsを使いたい</p>
                 <div class="item_photo">
                     <p class="left"><img src="img/hightlight/top.png" alt=""></p>
                 </div>
@@ -67,7 +69,8 @@
             </div>
         </div>
         <div class="item">
-            <div class="item_parent">
+            <div class="item_parent green">
+                <p class="item_title">電卓</p>
                 <div class="item_photo">
                     <p class="left"><img src="img/calc/top.png" alt=""></p>
                 </div>
@@ -91,7 +94,7 @@
                 </ul>
             </div>
 
-            <div class="item_parent">
+            <div class="item_parent pink">
                 <div class="item_photo">
                     <p class="left"><img src="" alt="未定"> </p>
                 </div>
