--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="top">
-            <p>Kawamori Saki</p>
+            <p>ポートフォリオ</p>
         </div>
 
 
