--- a/index.html
+++ b/index.html
@@ -3,124 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>ポートフォリオ用TOP</title>
 </head>
 <body>
-    
-
     <div class="container">
-        <div class="top">
-            <p>ポートフォリオ</p>
+        <div class="top top_bg">
+            <div class="ttl_inner">
+                <div class="ttl">PortFolio<br>K</div>
+                <div class="photo"><img src="img/top02.svg"></div>
+            </div>
         </div>
 
+        <div id="items" class="item">
 
-        <div class="item">
-            <div class="item_parent green">
-                <p class="item_title">花屋のサイト</p>
-                <div class="item_photo">
-                    <p class="left"><img src="img/flower/pc.png" alt=""></p>
-                    <p class="right"><img src="img/flower/sp.png" alt=""></p>
-                </div>
-                <ul class="text_list">
-                    <li class="text_list_item">
-                        <div class="text_list_title">URL</div>
-                        <div class="text_list_info">
-                            <a href="https://rivermori.github.io/tangrowth/flower/">
-                                https://rivermori.github.io/tangrowth/flower/
-                            </a>
-                        </div>
-                    </li>
-                    <li class="text_list_item">
-                    <div class="text_list_title">制作時期</div>
-                    <div class="text_list_info">2023年8月</div>
-                    </li>
-                    <li class="text_list_item">
-                    <div class="text_list_title">メモ</div>
-                    <div class="text_list_info">着手する案件にスライドを使用するものが多かったのと、ループスライドが苦手だったので、練習用で使用しました。</div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="item_parent pink">
-                <p class="item_title">コピペができるJsを使いたい</p>
-                <div class="item_photo">
-                    <p class="left"><img src="img/hightlight/top.png" alt=""></p>
-                </div>
-                <ul class="text_list">
-                    <li class="text_list_item">
-                        <div class="text_list_title">URL</div>
-                        <div class="text_list_info">
-                            <a href="https://rivermori.github.io/tangrowth/hightlight/">
-                                https://rivermori.github.io/tangrowth/hightlight/
-                            </a>
-                        </div>
-                    </li>
-                    <li class="text_list_item">
-                        <div class="text_list_title">制作時期</div>
-                        <div class="text_list_info">2023年8月</div>
-                    </li>
-                    <li class="text_list_item">
+            <div class="item_parent">
+                <p class="item_title">仮想花屋のサイト</p>
+                <div class="item_set">
+                    <div class="item_photo">
+                        <p class="left"><img src="img/flower/pc.png" alt=""></p>
+                    </div>
+                    <ul class="text_list">
+                        <li class="text_list_item">
+                        <div class="text_list_title">制作期間</div>
+                        <div class="text_list_info">7日</div>
+                        </li>
+                        <li class="text_list_item">
                         <div class="text_list_title">メモ</div>
-                        <div class="text_list_info">実務で独自関数を使用することになり、コピペできるようになったら楽になるのでは？と思って作成したhightlight.jsの個人版です。</div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="item">
-            <div class="item_parent green">
-                <p class="item_title">電卓</p>
-                <div class="item_photo">
-                    <p class="left"><img src="img/calc/top.png" alt=""></p>
+                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。(レスポンシブ対応)</div>
+                        </li>
+                        <li class="text_list_item red">
+                            <div class="text_list_info button">
+                                <a href="https://rivermori.github.io/tangrowth/flower/">
+                                    サイトへ移動する
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="text_list">
-                    <li class="text_list_item">
-                        <div class="text_list_title">URL</div>
-                        <div class="text_list_info">
-                            <a href="https://rivermori.github.io/tangrowth/calc/">
-                                https://rivermori.github.io/tangrowth/calc/
-                            </a>
-                        </div>
-                    </li>
-                    <li class="text_list_item">
-                    <div class="text_list_title">制作時期</div>
-                    <div class="text_list_info">2023年10月</div>
-                    </li>
-                    <li class="text_list_item">
-                    <div class="text_list_title">メモ</div>
-                    <div class="text_list_info">Jsで電卓を作りました。キーボード入力を可能にしたかったので、chat-GPT3.0を使用しながら作成しています。</div>
-                    </li>
-                </ul>
             </div>
 
-            <div class="item_parent pink">
-                <div class="item_photo">
-                    <p class="left"><img src="" alt="未定"> </p>
+            <div class="item_parent">
+                <p class="item_title">イマジナリー花屋のサイト</p>
+                <div class="item_set">
+                    <div class="item_photo">
+                        <p class="left"><img src="img/flower/pc.png" alt=""></p>
+                    </div>
+                    <ul class="text_list">
+                        <li class="text_list_item">
+                        <div class="text_list_title">制作期間</div>
+                        <div class="text_list_info">7日</div>
+                        </li>
+                        <li class="text_list_item">
+                        <div class="text_list_title">メモ</div>
+                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。(レスポンシブ対応)</div>
+                        </li>
+                        <li class="text_list_item red">
+                            <div class="text_list_info button">
+                                <a href="https://rivermori.github.io/tangrowth/flower/">
+                                    サイトに移動する
+                                </a>
+                            </div>
+                        </li>
+
+                    </ul>
                 </div>
-                <ul class="text_list">
-                    <li class="text_list_item">
-                        <div class="text_list_title">URL</div>
-                        <div class="text_list_info">
-                            <a href="https://rivermori.github.io/tangrowth/-/">
-                                https://rivermori.github.io/tangrowth/-/
-                            </a>
-                        </div>
-                    </li>
-                    <li class="text_list_item">
-                    <div class="text_list_title">制作時期</div>
-                    <div class="text_list_info">-</div>
-                    </li>
-                    <li class="text_list_item">
-                    <div class="text_list_title">メモ</div>
-                    <div class="text_list_info">-</div>
-                    </li>
-                </ul>
             </div>
+
         </div>
-
-
-
-
+        <footer class="">
+            2023-2024
+        </footer>
 </body>
 </html>
