--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </li>
                         <li class="text_list_item">
                         <div class="text_list_title">メモ</div>
-                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。(レスポンシブ対応)</div>
+                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。</div>
                         </li>
                         <li class="text_list_item red">
                             <div class="text_list_info button">
@@ -60,7 +60,7 @@
                         </li>
                         <li class="text_list_item">
                         <div class="text_list_title">メモ</div>
-                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。(レスポンシブ対応)</div>
+                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。</div>
                         </li>
                         <li class="text_list_item red">
                             <div class="text_list_info button">
