--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <div class="text_list_info">7日</div>
                         </li>
                         <li class="text_list_item">
-                        <div class="text_list_title">メモ</div>
-                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。</div>
+                        <div class="text_list_title">メモ（この花屋は存在しません）</div>
+                        <div class="text_list_info">着手案件にスライドを使用するものが多かったので、復習用。</div>
                         </li>
                         <li class="text_list_item red">
                             <div class="text_list_info button">
@@ -48,23 +48,23 @@
             </div>
 
             <div class="item_parent">
-                <p class="item_title">イマジナリー花屋のサイト</p>
+                <p class="item_title">架空のイベントサイト</p>
                 <div class="item_set">
                     <div class="item_photo">
-                        <p class="left"><img src="img/flower/pc.png" alt=""></p>
+                        <p class="left"><img src="event/img/event_top.png" alt=""></p>
                     </div>
                     <ul class="text_list">
                         <li class="text_list_item">
                         <div class="text_list_title">制作期間</div>
-                        <div class="text_list_info">7日</div>
+                        <div class="text_list_info">3日</div>
                         </li>
                         <li class="text_list_item">
                         <div class="text_list_title">メモ</div>
-                        <div class="text_list_info">着手する案件にスライドを使用するものが多かったので、復習用に制作。</div>
+                        <div class="text_list_info">配色から連想してこういうイベントがあったら面白そうだという感覚で制作</div>
                         </li>
                         <li class="text_list_item red">
                             <div class="text_list_info button">
-                                <a href="https://rivermori.github.io/tangrowth/flower/">
+                                <a href="https://rivermori.github.io/tangrowth/event/">
                                     サイトに移動する
                                 </a>
                             </div>
